# ImageProcess

./: .gitignore  BandFilter.cpp  BandFilter.h  CMakeLists.txt  DrawUtils.cpp  DrawUtils.h  GradientShow.cpp  GradientShow.h  README.md  SnapImage.cpp  SnapImage.h  main.cpp
python/: FadeImage.py
